--- a/sars-cov-2/profiles/clades/builds.yaml
+++ b/sars-cov-2/profiles/clades/builds.yaml
@@ -19,6 +19,7 @@ data_source:
   # pango: "https://raw.githubusercontent.com/cov-lineages/pango-designation/master/lineages.csv"
   # Contains SA B.1.1.529, switch back to master later
   pango: "https://raw.githubusercontent.com/cov-lineages/pango-designation/master/lineages.csv"
+  alias_key: "https://raw.githubusercontent.com/cov-lineages/pango-designation/master/pango_designation/alias_key.json"
 
 origins:
   metadata: "s3://nextstrain-ncov-private/metadata.tsv.gz"
@@ -38,29 +39,6 @@ refine:
   coalescent: "skyline"
   date_inference: "marginal"
 
-# Mask annotation
-#1820  - Orf1a:519
-#9430  - Orf1a:3055
-#10323 - Orf1a:3353
-#11083 - Orf1a:3606
-#13019 - Orf1a:4252
-#21575 - S:5
-#21614 - S:18
-#21846 - S:95
-#21987 - S:142
-#22917 - S:452
-#22992 - S:477
-#23012 - S:484
-#23063 - S:501
-#23593 - S:677
-#23604 - S:681
-#24410 - S:950
-#24642 - S:1027
-#26681 - M:53
-#26767 - M:82 Added because it pulls Eta into Delta causing E484K reversions
-#28461 - N:63
-#28887 - N:205
-#28975 - N:234
 mask: "--mask-from-beginning 100 --mask-from-end 50 --mask-terminal-gaps --mask-sites 1820 9430 10323 11083 13019 21575 21614 21846 21987 22917 22992 23012 23063 23593 23604 24410 24642 26681 26767 28461 28887 28975"
 
 samples:
